--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -53,8 +53,8 @@ blockquote {
 hr {
     display: block;
     position: relative;
-    padding: 0;
-    margin: 18px auto;
+    padding: 0px 0px 8px;
+    margin: 2em 0px 1em;
     width: 100%;
     clear: both;
     border: none;
@@ -73,7 +73,7 @@ h1 {
     font-weight: normal;
 }
 h2 {
-    margin: 0;
+    margin: 0em 0em 1em;
     padding: 0;
     font-size: 18px;
     font-style: italic;
@@ -84,7 +84,7 @@ h2 {
 h3 {
     margin: 0px 20px;
     padding: 0 0 .5em;
-    font-size: 150%;
+    font-size: 140%;
     font-style: italic;
     font-weight: normal;
 }
@@ -141,38 +141,37 @@ ol li {
     line-height: 24px;
     font-size: 14px;
 }
+ol li p {
+    margin: 0px;
+}
 ol li:nth-child(1) {
     border-top: none;
 }
 
 dl {
     display: inline-block;
-    width: 78%;
+    width: 79%;
     margin: 0;
     padding: 0;
     dt {
         margin: 0;
         padding: 0;
-        font-size: 140%;
+        font-size: 120%;
     }
     dd {
+        clear: right;
         margin: 0 0 1.5em;
         padding: 0;
-        font-size: 80%;
+        font-size: 90%;
         line-height: 1.4em;
+        padding-left: 30px;
+        text-indent: -30px;
     }
-    strong {
-        display: block;
-    }
-    em {
-        display: block;
-        font-size: 110%;
-        margin: .15em 0 .5em;
-        font-style: bold;
+    dd p {
+        margin: 0px;
     }
     
 }
-
 
 #footer {
     display: none;
