--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -112,6 +112,10 @@ ul {
 ul li {
     margin: 0;
     padding: 0;
+
+    dl dd {			/*definition description for Skills*/
+	text-indent: 0px;
+    }
 }
 
 ul dl {
@@ -171,8 +175,10 @@ dl {
         clear: right;
         margin: 0 0 1.5em;
         padding: 0;
+	font-size: 80%;
         line-height: 1.4em;
         padding-left: 30px;
+	text-indent: -30px;
     }
     dd p {
         margin: 0px;
