commit before renaming modern template to jalperin

--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -148,6 +148,7 @@ ol li {
     float: left;
     list-style: none;
     line-height: 24px;
+    font-size: 14px;
 }
 ol li p {
     margin: 0px;
@@ -177,13 +178,19 @@ dl {
         padding: 0;
 	font-size: 80%;
         line-height: 1.4em;
-        padding-left: 30px;
-	text-indent: -30px;
     }
     dd p {
         margin: 0px;
     }
-    
+    strong {
+        display: block;
+    }
+    em {
+        display: block;
+        font-size: 110%;
+        margin: .15em 0 .5em;
+        font-style: bold;
+    }
 }
 
 #footer {
