added width: 642px and text-align: justify to ul

--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -103,6 +103,8 @@ ul {
     padding: 0;
     list-style: none;
     display: table;
+    width: 642px;
+    text-align: justify;
 }
 ul li {
     margin: 0;
