--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -98,10 +98,9 @@ h3+p {
 }
 
 h4 {
-    margin: -.2em 0em .1em;
+    margin: .2em 0em 0em 8.8em;
     font-weight: normal;
     font-size: 120%;
-    margin: 0 0 0 170px;
 }
 
 ul {
