fixed tables, so they all have the same column widths instead of depending on contents of the particular table

--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -189,13 +189,20 @@ table {
     font-size: 14px;
     width: 79%;
     border-collapse: collapse;
-    margin: 0 0 0 170px;
+    margin: 0 0 0 12.1em;
     
     thead {
-	display:none;
+	    display:none;
+    }
+
+    td:nth-child(1) {
+        width: 45%;
+    }
+
+    td:nth-child(2) {
+        width: 45%;
     }
 }
-
 
 #footer {
     display: none;
