tried to define @media print on resume.css to get footer to be printed on all pages but didn't work..

--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -213,8 +213,17 @@ table {
     }
 }
 
-#footer {
-    display: none;
+@media screen {
+    #footer {
+        display: none;
+    }
+}
+
+@media print {
+    #footer {
+        position: fixed;
+        bottom: 0;
+    }
 }
 
 #footer + p {
