tried the same solution but in pdf.css but it didn't seem to work as well...

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -129,4 +129,9 @@ body.pdf {
         margin: .2em 0em .5em 12.5em;
     }
 
+    #footer+p {
+        position: fixed;
+        bottom: 0;
+    }
+
 }
