added some page-break stuff in dl but that doesn't seem to work for my purposes

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -115,8 +115,11 @@ body.pdf {
         display: block;
         width:79%;
         float: left;
-        dt {}
+        dt {
+            page-break-after: avoid !important; /* avoid, but not for sure */
+        }
         dd {
+            page-break-inside: avoid !important;
         }
         strong {
             float: right;
