added page-break-before to strengthen the case but nope, still doesn't work!

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -116,10 +116,12 @@ body.pdf {
         width:79%;
         float: left;
         dt {
+            page-break-inside: avoid !important;
             page-break-after: avoid !important; /* avoid, but not for sure */
         }
         dd {
             page-break-inside: avoid !important;
+            page-break-before: avoid !important;
         }
         strong {
             float: right;
