increased wkhtmltopdf's print top and bottom margins to 1.75cm! -- now all the margins (top/bottom/left/right) looks similar!

--- a/templates/jalperin/css/resume.css
+++ b/templates/jalperin/css/resume.css
@@ -67,7 +67,7 @@ hr {
     font-size: 1px;
     line-height: 0;
     overflow: visible;
-    page-break-after: avoid;
+    page-break-after: avoidg;
 }
 
 h1 {
