--- a/templates/modern/css/screen.css
+++ b/templates/modern/css/screen.css
@@ -72,7 +72,7 @@
     }
     h1 {
         margin-top: 0;
-        font-size: 48px;
+        font-size: 300%;
         text-transform: uppercase;
         letter-spacing: 3px;
         font-weight: normal;
