set all font-sizes as percentages -- now they should scale properly!

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -79,7 +79,7 @@ body.pdf {
             }
             dd {
                 padding: 0 0 0 0;
-                font-size: .73em;
+                font-size: 73%;
             }
         }
     }
