--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -75,7 +75,7 @@ h1 {
 h2 {
     margin: 0;
     padding-bottom: 8px;        /*tweak this to adjust hr position*/
-    font-size: 18px;
+    font-size: 112%;
     font-style: italic;
     letter-spacing: -1px;
     font-weight: normal;
@@ -121,7 +121,7 @@ h3+ul {
         dd {
             margin: 0 0 1em;
             padding: 0 2em 0 0;
-            font-size: .8em;
+            font-size: 80%;
             line-height: 1.5em;
         }
     }
@@ -156,7 +156,7 @@ ol li {
     float: left;
     list-style: none;
     line-height: 24px;
-    font-size: 14px;
+    font-size: 90%;
 }
 ol li:nth-child(1) {
     border-top: none;
@@ -196,7 +196,7 @@ dl {
 }
 
 table {
-    font-size: 14px;
+    font-size: 90%;
     width: 79%;
     border-collapse: collapse;
     margin: .2em 0em .5em 20.99%;
@@ -220,7 +220,7 @@ table {
 
 #footer + p {
     width: 100%;
-    font-size: 11px;
+    font-size: 70%;
     text-align: center;
 }
 
