--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -105,6 +105,7 @@ h3+ul {
     width: 642px;
     text-align: left;
 
+
     li {
         margin: 0;
         padding: 0;
@@ -115,8 +116,10 @@ h3+ul {
         margin: .3em 0 0;
         padding: 0;
         width: 100%;
+            
         dt {
             font-size: 115%;
+            margin-bottom: .75em;
         }
         dd {
             margin: 0 0 1em;
@@ -135,7 +138,7 @@ h4 {
 }
 
 h4+ul {
-    display:inline-block;
+    display: inline-block;
     margin: -0.4em 0 0 10.7em;
     padding: 0;
     list-style: none;
